openmediavault (0.5.0.21) stable; urgency=low

  * Update locales.
  * Various improvements and bugfixes.
  * Add IPv6 support. Note, the WebGUI only supports 'static' configuration
    because ifupdown package does not support 'auto' in Debian Squeeze.
    Select 'manual' to do not configure an interface.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 17 Jul 2013 18:30:59 +0200

openmediavault (0.5.0.20) stable; urgency=low

  * Modify mount options for non-rotational root devices.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 11 Jul 2013 19:58:25 +0200

openmediavault (0.5.0.19) stable; urgency=low

  * Update locales.
  * Various improvements and bugfixes.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 10 Jul 2013 18:15:35 +0200

openmediavault (0.5.0.18) stable; urgency=low

  * Update locales.
  * Introduce new configuration notification API.
  * Improve WebGUI user validation.
  * Display a information dialog after the RAID has been created.
  * Fix bug in user portal.
  * Fix bug when trying to display certificate details.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 07 Jul 2013 21:47:13 +0200

openmediavault (0.5.0.17) stable; urgency=low

  * Various improvements and bugfixes.
  * Recreate SSL certificates during postinst.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 07 Jul 2013 01:04:39 +0200

openmediavault (0.5.0.16) stable; urgency=low

  * Update locales.
  * Various improvements.
  * Fix CRC32 issue in RPC socket communication.
  * Add ability to enable/disable scheduled S.M.A.R.T. tests.
  * Add ability to initiate a S.M.A.R.T. test via WebGUI.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 06 Jul 2013 22:22:18 +0200

openmediavault (0.5.0.15) stable; urgency=low

  * Update locales.
  * Mantis 0000787: Display more SSH informations.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 05 Jul 2013 19:42:32 +0200

openmediavault (0.5.0.14) stable; urgency=low
