@@ -5,6 +5,9 @@ kernel.sysrq=0
 # Improve maximun md array reconstruction speed
 dev.raid.speed_limit_min=10000
 
+# Improve swappiness
+vm.swappiness=30
+
 # Enable IPv6 privacy extension
 net.ipv6.conf.all.use_tempaddr=2
 net.ipv6.conf.default.use_tempaddr=2
